
SUBDIRS = style includes images

web_DATA = \
  accessControls.html.en \
  accessControls.html.de \
  docList.html.en \
  docList.html.de \
  docDetail.html.en \
  docDetail.html.de \
  body.html.en \
  body.html.de \
  acquire.html.en \
  acquire.html.de

webdir = \
	$(pkgdatadir)/webcontent

EXTRA_DIST = \
	$(web_DATA)

## File created by the gnome-build tools

