
SUBDIRS = style includes images

web_DATA = \
	$(srcdir)/accessControls.html.* \
	$(srcdir)/docList.html.* \
	$(srcdir)/docDetail.html.* \
	$(srcdir)/body.html.* \
	$(srcdir)/acquire.html.*

webdir = \
	$(pkgdatadir)/webcontent

EXTRA_DIST = \
	$(web_DATA)

## File created by the gnome-build tools
