
web_DATA = \
	docDetail.html\
	body.html \
	acquire.html \
	common.css \
	datepicker.css \
	jquery.easyslider.css \
	jquery.gzoom.css \
	jquery-ui.css \
	tablesorter.css \
	footer.txt \
	header.txt \
	jquery.canvas-loader.js \
	jquery.easySlider.js \
	jquery.gzoom.js \
	jquery.js \
	jquery.mousewheel.js \
	jquery.tablesorter.min.js \
	jquery.tablesorter.pager.js \
	jquery-ui.min.js \
	openDias.acquire.js \
	openDias.docList.js \
	openDias.filter.js \
	openDias.loadDetails.js \
	openDias.saveDetails.js \
	openDias.tablesorter.pager.addRemove.js \
	openDIAS_64x64.ico \
	openDIAS_sml.png \
	asc.png \
	bg.png \
	desc.png \
	first.png \
	last.png \
	next.png \
	prev.png \
	pbar-ani.png \
	ui-bg_diagonals-thick_90_eeeeee_40x40.png \
	ui-bg_flat_15_cd0a0a_40x100.png \
	ui-bg_glass_50_3baae3_1x400.png \
	ui-bg_glass_80_d7ebf9_1x400.png \
	ui-bg_glass_100_e4f1fb_1x400.png \
	ui-bg_highlight-hard_70_000000_1x100.png \
	ui-bg_highlight-hard_100_f2f5f7_1x100.png \
	ui-bg_highlight-soft_25_ffef8f_1x100.png \
	ui-bg_highlight-soft_100_deedf7_1x100.png \
	ui-icons_2e83ff_256x240.png \
	ui-icons_3d80b3_256x240.png \
	ui-icons_72a7cf_256x240.png \
	ui-icons_2694e8_256x240.png \
	ui-icons_ffffff_256x240.png \
	datepicker_b.png \
	datepicker_bl.png \
	datepicker_br.png \
	datepicker_l.png \
	datepicker_r.png \
	datepicker_t.png \
	datepicker_tl.png \
	datepicker_tr.png \
	field.png

webdir = \
	$(pkgdatadir)

EXTRA_DIST = \
	$(web_DATA)

## File created by the gnome-build tools

