
SUBDIRS = style includes images

web_DATA = \
  accessControls.html.en \
  docList.html.en \
  docList.html.de \
  docDetail.html.en \
  body.html.en \
  body.html.de \
  buglist.html.en \
  acquire.html.en \
  acquire.html.de

webdir = \
	$(pkgdatadir)/webcontent

EXTRA_DIST = \
	$(web_DATA)

## File created by the gnome-build tools

