SUBDIRS = local

web_DATA = \
  header.txt.en \
  header.txt.de \
  footer.txt.en \
  footer.txt.de \
	jquery.canvas-loader.js \
	jquery.easySlider.js \
	jquery.gzoom.js \
	jquery.tagsinput.js \
	jquery.js \
	jquery.mousewheel.js \
	jquery-ui.min.js \
  sprintf-0.7-beta1.js \
	openDias.acquire.js \
	openDias.docList.js \
	openDias.filter.js \
	openDias.loadDetails.js \
	openDias.saveDetails.js \
	openDias.accessControls.js \
  openDias.userdetails.js 

webdir = \
	$(pkgdatadir)/webcontent/includes

EXTRA_DIST = \
	$(web_DATA)

## File created by the gnome-build tools

