
SUBDIRS = easySlider datepicker jquery-ui

web_DATA = \
        cabinet.jpg \
	openDIAS_64x64.ico \
	openDIAS_sml.png \
        opendias.jpg \
        texture.png \
        actionrequired.png

webdir = \
	$(pkgdatadir)/webcontent/images

EXTRA_DIST = \
	$(web_DATA)

## File created by the gnome-build tools

