
web_DATA = \
        header.txt \
        footer.txt \
	jquery.canvas-loader.js \
	jquery.easySlider.js \
	jquery.gzoom.js \
	jquery.js \
	jquery.mousewheel.js \
	jquery.tablesorter.min.js \
	jquery.tablesorter.pager.js \
	jquery-ui.min.js \
	openDias.acquire.js \
	openDias.docList.js \
	openDias.filter.js \
	openDias.loadDetails.js \
	openDias.saveDetails.js \
	openDias.getAccessDetails.js \
	openDias.tablesorter.pager.addRemove.js 

webdir = \
	$(pkgdatadir)/webcontent/includes

EXTRA_DIST = \
	$(web_DATA)

## File created by the gnome-build tools

