
web_DATA = \
  generic.resource.en \
  generic.resource.de \
  openDias.acquire.js.resource.en \
  openDias.acquire.js.resource.de \
  openDias.loadDetails.js.resource.en \
  openDias.loadDetails.js.resource.de \
  openDias.saveDetails.js.resource.en \
  openDias.saveDetails.js.resource.de \
  openDias.docList.js.resource.en \
  openDias.docList.js.resource.de \
  openDias.filter.js.resource.en \
  openDias.filter.js.resource.de \
  openDias.accessControls.js.resource.en 

webdir = \
	$(pkgdatadir)/webcontent/includes/local

EXTRA_DIST = \
	$(web_DATA)

