
web_DATA = \
  generic.resource.* \
  openDias.acquire.js.resource.* \
  openDias.loadDetails.js.resource.* \
  openDias.saveDetails.js.resource.* \
  openDias.docList.js.resource.* \
  openDias.filter.js.resource.* \
  openDias.accessControls.js.resource.*

webdir = \
	$(pkgdatadir)/webcontent/includes/local

EXTRA_DIST = \
	$(web_DATA)

