
web_DATA = \
	$(srcdir)/generic.resource.* \
	$(srcdir)/openDias.acquire.js.resource.* \
	$(srcdir)/openDias.loadDetails.js.resource.* \
	$(srcdir)/openDias.saveDetails.js.resource.* \
	$(srcdir)/openDias.docList.js.resource.* \
	$(srcdir)/openDias.filter.js.resource.* \
	$(srcdir)/openDias.accessControls.js.resource.*

webdir = \
	$(pkgdatadir)/webcontent/includes/local

EXTRA_DIST = \
	$(web_DATA)

