
web_DATA = \
        pbar-ani.png \
	ui-bg_diagonals-thick_90_eeeeee_40x40.png \
	ui-bg_flat_15_cd0a0a_40x100.png \
	ui-bg_glass_50_3baae3_1x400.png \
	ui-bg_glass_80_d7ebf9_1x400.png \
	ui-bg_glass_100_e4f1fb_1x400.png \
	ui-bg_highlight-hard_70_000000_1x100.png \
	ui-bg_highlight-hard_100_f2f5f7_1x100.png \
	ui-bg_highlight-soft_25_ffef8f_1x100.png \
	ui-bg_highlight-soft_100_deedf7_1x100.png \
	ui-icons_2e83ff_256x240.png \
	ui-icons_3d80b3_256x240.png \
	ui-icons_72a7cf_256x240.png \
	ui-icons_2694e8_256x240.png \
	ui-icons_ffffff_256x240.png

webdir = \
	$(pkgdatadir)/webcontent/images/jquery-ui

EXTRA_DIST = \
	$(web_DATA)

## File created by the gnome-build tools

