
web_DATA = \
  generic.resource.en \
  openDias.acquire.js.resource.en \
  openDias.loadDetails.js.resource.en \
  openDias.saveDetails.js.resource.en \
  openDias.docList.js.resource.en \
  openDias.filter.js.resource.en 


webdir = \
	$(pkgdatadir)/webcontent/includes/local

EXTRA_DIST = \
	$(web_DATA)

